--- a/2-CSS3/15-projeto-css/index.html
+++ b/2-CSS3/15-projeto-css/index.html
@@ -10,24 +10,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400&display=swap" rel="stylesheet" />
     
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <main>
         <!--Classes nomeadas no modelo BEM - block element e modifier-->
         <section class="hero">
+            <!--Em loop em autoplay e muted -mutado -->
             <video class="hero__background" autoplay muted loop>
                 <source src="video/pexels-zlatin-georgiev-5607740_2160p.mp4" type="video/mp4" />
             </video>
+
             <div class="hero__foreground">
                 <h1 class="hero__title">Get Ready to Seal-abrate!</h1>
                 <p class="hero__text">
-                    Dive in and Discover the Charm of These Aquatic Wonders
+                    Dive in and  Discover the Charm of These Aquatic Wonders
                 </p>
             </div>
         </section>
-
+  
         <section class="section">
             <h2 class="section__title">Exploring the World of Seals</h2>
             <img class="section__img" src="img/pexels-minsu-b-11932453.jpg" alt="" />
@@ -62,7 +64,7 @@
             </div>
         </section>
 
-        <section class="section">
+        <section id="hangouts" class="section">
             <h2 class="section__title">Seal Hangouts</h2>
             <img class="section__img" src="img/pexels-diana-4445229.jpg" alt="" />
             <p class="section__text">
@@ -101,7 +103,7 @@
 
         <section class="section">
             <h2 class="section__title">Cool Facts About Seals</h2>
-            <img class="section__img-inline" src="img/pexels-daniel-lee-3187036.jpg" alt="" />
+            <img id="img-inline-rigth" class="section__img-inline" src="img/pexels-daniel-lee-3187036.jpg" alt="" />
             <div class="section__text-inline">
                 <p>
                     Dive into the world of seals, those charming sea creatures with a
@@ -129,7 +131,7 @@
             <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
         </svg>
         by
-        <a href="https://github.com/isaacpontes" target="_blank">@isaacpontes</a>
+        <a href="https://github.com/Abner-Santana" target="_blank">@Abner-Santana</a>
     </footer>
 </body>
 
